Removing hashes from paths

--- a/omicron/edit/templates/edit/main.html
+++ b/omicron/edit/templates/edit/main.html
@@ -14,8 +14,8 @@
         <link rel="manifest" href="/manifest.json"/>
         -->
 
-        <script defer="defer" src="/static/js/main.f43bc6ed.js"> </script>
-        <link href="/static/css/main.073c9b0a.css" rel="stylesheet">
+        <script defer="defer" src="/static/js/main.js"> </script>
+        <link href="/static/css/main.css" rel="stylesheet">
     </head>
 
     <body>
