--- a/omicron/edit/templates/edit/main.html
+++ b/omicron/edit/templates/edit/main.html
@@ -14,13 +14,47 @@
         <link rel="manifest" href="/manifest.json"/>
         -->
 
+        <!-- main editor react app -->
+        <!--
+        <script defer="defer" src="http://pi3:3000/static/js/main.js"> </script>
+        <link href="http://pi3:3000/static/css/main.css" rel="stylesheet">
+        -->
         <script defer="defer" src="/static/js/main.js"> </script>
         <link href="/static/css/main.css" rel="stylesheet">
+
+        <!-- Bootstrap (CSS only) -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     </head>
 
     <body>
-        <noscript>Javascript is required for this to function.</noscript>
-        <h3>testing this</h3>
-        <div id="root"></div>
+        <div class="d-flex flex-column">
+            <nav class="navbar navbar-expand bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Stuff</a>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Edit</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Explore</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <button class="btn btn-outline-success" type="submit">Login</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+
+            <div id="root" class="flex-grow-1">
+                <noscript>Javascript is required for this to function.</noscript>
+            </div>
+        </div>
     </body>
 </html>
