--- a/omicron/edit/templates/edit/main.html
+++ b/omicron/edit/templates/edit/main.html
@@ -5,6 +5,7 @@
         <title>Testing this</title>
 
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, inital-scale=1.0" />
         <!--
         <link rel="icon" href="/favicon.ico"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
