--- a/omicron/templates/common/base.html
+++ b/omicron/templates/common/base.html
@@ -40,11 +40,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" href="{% url 'edit:editor' %}">Edit</a>
+                                <a class="nav-link active" href="{% url 'edit:createProject' %}">Edit</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">Explore</a>
+                                <a class="nav-link active" href="{% url 'edit:explore' %}">Explore</a>
                             </li>
                         </ul>
 
